Remove direct dependency on Unsafe. * split this out into invoke-unsafe module. * add ServiceLoader support to allow other user implementations.